<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:id="@+id/img_film"
                android:scaleType="fitXY"
                android:src="@color/grey"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/tv_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tittle"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="@color/grey"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Score : "/>

                    <TextView
                        android:id="@+id/tv_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/score"
                        android:textSize="18sp"
                        android:fontFamily="monospace"
                        android:textColor="@color/greenku"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="@color/grey"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="status : "/>

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="@color/grey"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Relase : "/>

                    <TextView
                        android:id="@+id/tv_relase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/relase"
                        android:textStyle="italic"
                        android:textSize="15sp"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="@color/grey"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Runtime : "/>

                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/runtime"
                        android:textSize="15sp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="@color/grey"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Lenguage : "/>

                    <TextView
                        android:id="@+id/tv_lenguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lengueage"
                        android:textSize="15sp"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="@color/grey"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Genre"
            android:background="@color/grey"
            android:textAlignment="center"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Overview"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:background="@color/grey"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>